Adding problem 3 solved
I would like to modify this solution to perhaps using json stringify.