@@ -10,10 +10,29 @@ repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_14
+}
+test {
+    useJUnitPlatform()
+    jvmArgs("--enable-preview")
+}
+
 dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
 }
 
-test {
-    useJUnitPlatform()
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
 }
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+
+
